--- a/index.html
+++ b/index.html
@@ -55,32 +55,58 @@
        -->
       <div class="hero-wrapper">
         <div class="hero-container">
-          <div class="hero-text">
-            <h1>Build The Community Your Fans Will Love</h1>
-            <p>
-              Huddle re-imagines the way we build communities. You have a voice,
-              but so does your audience. Create connections with your users as
-              you engage in genuine discussion.
-            </p>
-          </div>
+          <h1>Build The Community Your Fans Will Love</h1>
+          <p>
+            Huddle re-imagines the way we build communities. You have a voice,
+            but so does your audience. Create connections with your users as you
+            engage in genuine discussion.
+          </p>
           <a href="#">Get Started For Free</a>
           <img src="./images/illustration-mockups.svg" alt="" />
         </div>
       </div>
+
+      <!-- 
+        BENEFITS
+       -->
+      <div class="benefits-wrapper">
+        <div class="benefits-container">
+          <div class="benefits-card card1">
+            <img src="./images/illustration-grow-together.svg" alt="" />
+            <h2>Grow Together</h2>
+            <p>
+              Generate meaningful discussions with your audience and build a
+              strong, loyal community. Think of the insightful conversations you
+              miss out on with a feedback form.
+            </p>
+          </div>
+          <div class="benefits-card card2">
+            <img src="./images/illustration-flowing-conversation.svg" alt="" />
+            <h2>Flowing Conversations</h2>
+            <p>
+              You wouldn't paginate a conversation in real life, so why do it
+              online? Our threads have just-in-time loading for a more natural
+              flow.
+            </p>
+          </div>
+          <div class="benefits-card card3">
+            <img src="./images/illustration-your-users.svg" alt="" />
+            <h2>Your Users</h2>
+            <p>
+              It takes no time at all to integrate Huddle with your app's
+              authentication solution. This means, once signed in to your app,
+              your users can start chatting immediately.
+            </p>
+          </div>
+        </div>
+      </div>
     </main>
 
-    Grow Together Generate meaningful discussions with your audience and build a
-    strong, loyal community. Think of the insightful conversations you miss out
-    on with a feedback form. Flowing Conversations You wouldn't paginate a
-    conversation in real life, so why do it online? Our threads have
-    just-in-time loading for a more natural flow. Your Users It takes no time at
-    all to integrate Huddle with your app's authentication solution. This means,
-    once signed in to your app, your users can start chatting immediately. Ready
-    To Build Your Community? Get Started For Free Lorem ipsum dolor sit amet,
-    consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
-    dolore magna aliqua +1-543-123-4567 example@huddle.com About Us What We Do
-    FAQ Career Blog Contact Us &copy; Copyright 2018 Huddle. All rights
-    reserved.
+    Ready To Build Your Community? Get Started For Free Lorem ipsum dolor sit
+    amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
+    labore et dolore magna aliqua +1-543-123-4567 example@huddle.com About Us
+    What We Do FAQ Career Blog Contact Us &copy; Copyright 2018 Huddle. All
+    rights reserved.
 
     <footer>
       <p class="attribution">
