--- a/index.html
+++ b/index.html
@@ -18,7 +18,6 @@
     <link
       href="https://fonts.googleapis.com/css2?family=Poppins:wght@600&display=swap"
       rel="stylesheet"
-      <link
       rel="stylesheet"
       href="style.css"
     />
@@ -102,19 +101,106 @@
       </div>
     </main>
 
-    Ready To Build Your Community? Get Started For Free Lorem ipsum dolor sit
-    amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
-    labore et dolore magna aliqua +1-543-123-4567 example@huddle.com About Us
-    What We Do FAQ Career Blog Contact Us &copy; Copyright 2018 Huddle. All
-    rights reserved.
-
     <footer>
-      <p class="attribution">
-        Challenge by
-        <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
-          >Frontend Mentor</a
-        >. Coded by <a href="#">Your Name Here</a>.
-      </p>
+      <div class="footer-wrapper">
+        <!-- 
+          CTA
+        -->
+        <div class="cta">
+          <h2>Ready To Build Your Community?</h2>
+          <a href="#">Get Started For Free</a>
+        </div>
+
+        <div class="footer-container">
+          <!-- 
+            CONTACT 
+          -->
+          <div class="footer-location">
+            <a href="#"
+              >Lorem ipsum dolor sit amet,
+              <div class="margin-left">consectetur adipiscing elit, sed do</div>
+              <div class="margin-left">
+                eiusmod tempor incididunt ut labore et
+              </div>
+              <div class="margin-left">dolore magna aliqua</div></a
+            >
+          </div>
+          <div class="footer-phone">
+            <a href="tel:+15431234567">Phone: +1-543-123-4567</a>
+          </div>
+          <div class="footer-email">
+            <a href="mailto:admin@fylo.com">example@fylo.com</a>
+          </div>
+
+          <!-- 
+            FOOTER NAVAGATION 
+          -->
+          <div class="nav-footer">
+            <nav aria-label="footer">
+              <ul>
+                <li><a href="#">About Us</a></li>
+                <li><a href="#">What We Do</a></li>
+                <li><a href="#">FAQ</a></li>
+                <li><a href="#">Career</a></li>
+                <li><a href="#">Blog</a></li>
+                <li><a href="#">Contact Us</a></li>
+              </ul>
+            </nav>
+          </div>
+
+          <!-- 
+            SOCIAL MEDIA
+          -->
+          <div class="social-media">
+            <ol>
+              <li>
+                <a
+                  href="https://www.facebook.com/"
+                  aria-label="facebook"
+                  target="_blank"
+                  rel="noopener"
+                  ><i class="fa-brands fa-facebook-f"></i
+                ></a>
+              </li>
+              <li>
+                <a
+                  href="https://twitter.com/?lang=en"
+                  aria-label="twitter"
+                  target="_blank"
+                  rel="noopener"
+                >
+                  <i class="fa-brands fa-twitter"></i
+                ></a>
+              </li>
+              <li>
+                <a
+                  href="https://www.instagram.com/"
+                  aria-label="instagram"
+                  target="_blank"
+                  rel="noopener"
+                >
+                  <i class="fa-brands fa-instagram"></i
+                ></a>
+              </li>
+            </ol>
+            <p>&copy; Copyright 2018 Huddle. All rights reserved.</p>
+          </div>
+
+          <p class="attribution">
+            Challenge by
+            <a
+              href="https://www.frontendmentor.io?ref=challenge"
+              target="_blank"
+              >Frontend Mentor</a
+            >. Coded by
+            <a
+              href="https://github.com/alwaysBeThankful/huddle.github.io"
+              target="blank"
+              >alwaysBeThankful</a
+            >.
+          </p>
+        </div>
+      </div>
     </footer>
   </body>
 </html>
