Finished HTML / CSS 1440px
Finished 1440PX of the desktop, just working on fixing any mistakes if
there is any

--- a/index.html
+++ b/index.html
@@ -54,13 +54,15 @@
        -->
       <div class="hero-wrapper">
         <div class="hero-container">
-          <h1>Build The Community Your Fans Will Love</h1>
-          <p>
-            Huddle re-imagines the way we build communities. You have a voice,
-            but so does your audience. Create connections with your users as you
-            engage in genuine discussion.
-          </p>
-          <a href="#">Get Started For Free</a>
+          <div class="hero-text">
+            <h1>Build The Community Your Fans Will Love</h1>
+            <p>
+              Huddle re-imagines the way we build communities. You have a voice,
+              but so does your audience. Create connections with your users as
+              you engage in genuine discussion.
+            </p>
+            <a href="#">Get Started For Free</a>
+          </div>
           <img src="./images/illustration-mockups.svg" alt="" />
         </div>
       </div>
@@ -72,30 +74,36 @@
         <div class="benefits-container">
           <div class="benefits-card card1">
             <img src="./images/illustration-grow-together.svg" alt="" />
-            <h2>Grow Together</h2>
-            <p>
-              Generate meaningful discussions with your audience and build a
-              strong, loyal community. Think of the insightful conversations you
-              miss out on with a feedback form.
-            </p>
+            <div class="bc-text">
+              <h2>Grow Together</h2>
+              <p>
+                Generate meaningful discussions with your audience and build a
+                strong, loyal community. Think of the insightful conversations
+                you miss out on with a feedback form.
+              </p>
+            </div>
           </div>
           <div class="benefits-card card2">
             <img src="./images/illustration-flowing-conversation.svg" alt="" />
-            <h2>Flowing Conversations</h2>
-            <p>
-              You wouldn't paginate a conversation in real life, so why do it
-              online? Our threads have just-in-time loading for a more natural
-              flow.
-            </p>
+            <div class="bc-text">
+              <h2>Flowing Conversations</h2>
+              <p>
+                You wouldn't paginate a conversation in real life, so why do it
+                online? Our threads have just-in-time loading for a more natural
+                flow.
+              </p>
+            </div>
           </div>
           <div class="benefits-card card3">
             <img src="./images/illustration-your-users.svg" alt="" />
-            <h2>Your Users</h2>
-            <p>
-              It takes no time at all to integrate Huddle with your app's
-              authentication solution. This means, once signed in to your app,
-              your users can start chatting immediately.
-            </p>
+            <div class="bc-text">
+              <h2>Your Users</h2>
+              <p>
+                It takes no time at all to integrate Huddle with your app's
+                authentication solution. This means, once signed in to your app,
+                your users can start chatting immediately.
+              </p>
+            </div>
           </div>
         </div>
       </div>
@@ -115,21 +123,28 @@
           <!-- 
             CONTACT 
           -->
-          <div class="footer-location">
-            <a href="#"
-              >Lorem ipsum dolor sit amet,
-              <div class="margin-left">consectetur adipiscing elit, sed do</div>
-              <div class="margin-left">
-                eiusmod tempor incididunt ut labore et
-              </div>
-              <div class="margin-left">dolore magna aliqua</div></a
-            >
-          </div>
-          <div class="footer-phone">
-            <a href="tel:+15431234567">Phone: +1-543-123-4567</a>
-          </div>
-          <div class="footer-email">
-            <a href="mailto:admin@fylo.com">example@fylo.com</a>
+          <div class="footer-flex">
+            <div class="footer-location">
+              <a href="#"
+                >Lorem ipsum dolor sit amet,
+                <div class="margin-left">
+                  consectetur adipiscing elit, sed do
+                </div>
+                <div class="margin-left">
+                  eiusmod tempor incididunt ut labore et
+                </div>
+                <div class="margin-left">dolore magna aliqua</div></a
+              >
+            </div>
+            <div class="footer-phone">
+              <a href="tel:+15431234567"
+                ><span class="visibility">Phone:</span
+                ><span class="footer-number">+1-543-123-4567</span></a
+              >
+            </div>
+            <div class="footer-email">
+              <a href="mailto:admin@fylo.com">example@fylo.com</a>
+            </div>
           </div>
 
           <!-- 
@@ -138,12 +153,12 @@
           <div class="nav-footer">
             <nav aria-label="footer">
               <ul>
-                <li><a href="#">About Us</a></li>
-                <li><a href="#">What We Do</a></li>
-                <li><a href="#">FAQ</a></li>
-                <li><a href="#">Career</a></li>
-                <li><a href="#">Blog</a></li>
-                <li><a href="#">Contact Us</a></li>
+                <li><a href="#" class="f-negative-left">About Us</a></li>
+                <li><a href="#" class="f-negative-left">What We Do</a></li>
+                <li><a href="#" class="f-negative-left">FAQ</a></li>
+                <li><a href="#" class="footer-left">Career</a></li>
+                <li><a href="#" class="footer-left">Blog</a></li>
+                <li><a href="#" class="footer-left">Contact Us</a></li>
               </ul>
             </nav>
           </div>
@@ -185,7 +200,6 @@
             </ol>
             <p>&copy; Copyright 2018 Huddle. All rights reserved.</p>
           </div>
-
           <p class="attribution">
             Challenge by
             <a
